index.css
body, html {
    height: 100%;

}


.flexbox-container {
  height: 100%;
  background-repeat: repeat;
  background-position: center;
  background-size: contain;
  background-image: url(images/IMG_0019-COLLAGE.jpg);
  opacity: 0.8;
}

.mx-auto {
  height: 9.9vw;
  width: 13.9vw;
  border-radius: 10pt;
}

.navbar  {
  background-color: rgb(150,200,239);
  margin-bottom: 0px;

}


#gettingMarried {
  font-weight: bold;
}

a:hover {
  color: lightgreen;
  background-color: lightblue;
}

#the {
  font-size: 40px;
  font-family: 'Rouge Script', cursive;
}

#jessNereusWedding {
  text-align: center;
  font-size: 5.4vw;
  opacity: 1 !important;
}

#rsvpText {
  /*color: yellow;*/
  /*color: rgb(150,200,239);*/
  /*margin-top: 100%;*/
  /*font-family: 'Italianno', cursive;*/
  font-family: 'Pinyon Script', cursive;
  /*font-family: 'Oranienbaum', serif;*/
    /*font-family: 'Tangerine', cursive;*/
}

#hearts {
position: absolute;
  z-index: 1;
}

#details_section {

  margin-left: 21vw;
}

#namesDateLocation {
  background-color: black;
  padding: .9vw;
  color:rgb(150,200,239);

  text-align: center;
}
.jessNereus{

/*/  margin-top: 141px !important;*/

  padding-top: 17vw;
    /*margin-left: 7%;*/
  font-size: 3.4vw;
  /*text-shadow: 4px 4px 0px rgba(0,0,0,0.1);*/
  /*font-family: 'Alex Brush', cursive;*/
}

#goingToMontanaHeader {
  font-family: 'Pinyon Script', cursive;
  color: black;
  font-size: 4.1vw;

}

#lotsToSee {
  font-size: 4.1vw;
  text-align: right;
  font-family: 'Pinyon Script', cursive;

}
.montana {
  font-family: 'Pinyon Script', cursive;
  font-size: 4.9vw;
}

.attractionHeader,  .attractionDescription {
  padding-bottom: 60px !important;
}

.attractionHeader {
  font-family: Gill Sans, Verdana;
  font-size: 14px;
  line-height: 14px;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-weight: bold;
}

.parent {
  display: flex;
  justify-content: flex-start;
  max-width: 100%;
  margin: 40px auto 0 auto;
  width: 100%;

  background-color: lightblue;
}

.child {
  flex-basis: 30%;
    width: 40px;
    flex: 1;
    padding: 16px;
    margin: 9px;
    text-align: center;
    font-size: 9vw;
    border-style: outset;
    background-color: paleturquoise;
}
/*
h1  {
  font-size: 8vw;
}

h6 {
  font-size: 2vw;
  letter-spacing: .5vw;
}*/

.rsvpChild {
  margin-left: 5vw;
}

.children {
  margin-right: 5vw;
  border-left: 0;
}

.parent2 {
  background-color: lightblue;
  display: flex;
  justify-content: flex-start;
  max-width: 100%;
  margin: 40px auto 0 auto;
  width: 100%;
}

.child2 {
  flex-basis: 30%;
  margin: 10%;
  width: 40px;
  flex: 1;

}

.love{
  color: dodgerblue;
  font-family: 'Pinyon Script', cursive;
  font-size: 4vw;
}
#love {
  font-size: 7vw;
}

#weddingGifts {
  text-align: center;
  padding-top: 3vw;
  font-size: 2vw;
}

p {
margin:  0px 22px -31px !important;
}

.parent img:hover{
  opacity: 0.3;
}

th {
  font-family: 'Pinyon Script', cursive;
  font-size: 3vw;
}

td, th {
  padding: 3vw;
}

table {
  text-align: right;
  border-width: thin;
  border-style: double;
  border-radius: 10%;
  border-color: rgb(102,2,60);
  color: rgb(102,2,60);
  background-color: #ffefdb;
  margin-top: 5vw;

}
@@media query {

}
#sunflower {

  position: relative;
/* left: 0px; */
/* top: 0px; */
z-index: 1;
margin-top: -104vw;
margin-left: 50vw;

}

.time {
    font-size: 2vw;
}

.scheduleInfo {
    font-size: 2vw;
  text-align: left;
  padding-left: 5vw;
}
.zola1 {
  /*margin-top: 10%;*/
  width: 150%;
  margin-left: -30%;
}

.amazon1 {
  margin-top: 45%;
    width: 100%;
    border-width: thick;
    padding-left: 10%;
}

  #details {
    color: gray;
    font-size: 1.9vw;
    width: 105%;
    line-height: 3vw;
  }

  #shuttle {
    font-size: 1.9vw;
    text-align: center;
    width: 105%;
    color: gray;
  }

 /*
 #jessNereus {
   margin-top: 50px !important;
   margin-left: -20px;
   font-size: 30px !important;
   letter-spacing: -2px;
   font-family: 'Rouge Script', cursive;
 }

 #gettingMarried {
   font-size: 10pt;
   letter-spacing: 1pt;
   margin-top: -10px;
 }

 #family {
   width: 150px;
   border-radius: 10px;
 }
 #details {
   margin-top: 30px;
   line-height: 30px;
   letter-spacing: -1;
   font-size: 12px;
 }

 #rsvp {
   font-size: 70px;
   text-align: center;
 }


}*/
/* ... */

